# wdi-py

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  index.html  index.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
data/output/: automation_unemployment.html  debt_development.html  development_tradeoffs.html  education_debt.html  education_opportunity.html  gender_gaps.html  healthcare_access.html  imperial_extraction.html  index.md  inequality_geography.html  labor_productivity.html  military_healthcare.html  wage_stagnation.html  wealth_wellbeing.html
db/: client.yml  server.yml
docs/: examples.md  implementation.md  input.md  theme.md
scripts/: ci.sh  db-import.sh  db-server.sh  db.sh
scripts/ddl/: import.sql
scripts/docs/: input.sh
scripts/examples/: automation_unemployment.py  debt_development.py  development_tradeoffs.py  education_debt.py  education_opportunity.py  gender_gaps.py  healthcare_access.py  imperial_extraction.py  inequality_geography.py  labor_productivity.py  military_healthcare.py  wage_stagnation.py  wealth_wellbeing.py
scripts/queries/: gdp_usa.sql  have_regions.sql  record_counts.sql
tests/: __init__.py  test_chart.py  test_df.py  test_sql.py
wdi/: __init__.py  chart.py  df.py  sql.py
